syntax = "proto2";

package NetSceneGetHotSearchProto;


message NetSceneGetHotSearchReq {
  optional uint32 usr_id = 1;

}


message NetSceneGetHotSearchResp {
  message HotSearchItem {
    enum ItemType {
      PLANT     = 0;
      ANIMAL    = 1;
      LANDMARK  = 2;
    }
    optional string item_name = 1;
    optional ItemType item_type = 2 [default = PLANT];
    optional uint32 heat = 3;
    optional string item_desc = 4;
  }

  repeated HotSearchItem hot_search_items = 1;
}
